--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,8 +2,8 @@
     // See http://go.microsoft.com/fwlink/?LinkId=827846
     // for the documentation about the extensions.json format
     "recommendations": [
-        "platformio.platformio-ide",
-        "github.vscode-github-actions"
+        "github.vscode-github-actions",
+        "platformio.platformio-ide"
     ],
     "unwantedRecommendations": [
         "ms-vscode.cpptools-extension-pack"
